--- a/training/views/shop/product-detail.ejs
+++ b/training/views/shop/product-detail.ejs
@@ -8,7 +8,7 @@
   <main class="centered">
     <h1><%= product.title %></h1>
     <hr>
-    <div>
+    <div class="image">
       <img src="<%= product.imageUrl %>" alt="<%= product.title %>" srcset="">
     </div>
     <h2><%= product.price %></h2>
