feat: Add Sequelize functionality for Cart and Order
Define models, relationships, and updated controller functions.
Convert cart.js to use sequelize.
Additional CSS.
Updated views.

--- a/training/public/css/main.css
+++ b/training/public/css/main.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import './cart.css';
+@import './forms.css';
+@import './product.css';
 
 * {
   box-sizing: border-box;
@@ -202,6 +205,17 @@ form {
 .btn:hover,
 .btn:active {
   background-color: #00695c;
+  color: white;
+}
+
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
   color: white;
 }
 
